--- a/project 2/index.css
+++ b/project 2/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,500;1,400;1,500&display=swap');
 body {
     font-family: 'Ubuntu', sans-serif;
-    background-color: #121212;
+    background: url(https://images.unsplash.com/photo-1544306094-e2dcf9479da3) no-repeat;
     height: 100vh;
     display: grid;
     align-items: center;
@@ -9,19 +9,25 @@ body {
 }
 
 .joke-container {
+    backdrop-filter: blur(5px);
     padding: 1em;
+    border-radius: 15px;
     width: 70vw;
-    background-color: white;
-    height: fit-content;
+    background-color: rgba(240, 248, 255, 0.384);
     display: grid;
     grid-template-rows: 8fr 8fr 1fr;
     justify-content: center;
 }
 
+.joke-container:hover {
+    background-color: rgba(0, 255, 255, 0.349);
+}
+
 button {
-    background-color: orange;
+    background-color: rgb(189, 185, 179);
     justify-self: center;
     transition: 2s all;
+    border-radius: 12px;
 }
 
 button:hover {
